# rp2040-tuner

./: CMakeLists.txt  biquad.c  biquad.h  core1_main.c  core1_main.h  imu.c  imu.h  main.c  notes.txt  processing.c  processing.h  tuner.c  tuner.h
lib/Config/: DEV_Config.c  DEV_Config.h
lib/LCD/: LCD_1in28.h
lib/QMI8658/: QMI8658.c  QMI8658.h
